# nmail

./: .gitignore  CONFIG.md  INSTALL.md  LICENSE  Makefile  PROBLEMS.md  README.md  SKILL.md  install.sh  pyproject.toml
config/: config.toml
config/hooks.d/: on-error  on-new  on-sent
doc/: 00-architecture.md  01-cli-spec.md  01-directory-structure.md  02-configuration.md  02-process-flows.md  03-cli-spec.md  03-composability.md  04-configuration.md  04-example-pipelines.md  05-composability.md  05-installation-and-e2e-guide.md  05-tmux-session.md  06-composability.md  06-hooks.md  07-hooks.md  07-implementation-plan.md  08-implementation-plan.md  09-example-pipelines.md  09-installation-and-e2e-guide.md  10-installation-and-e2e-guide.md
src/: common.sh  maildir.sh  notmuch.sh  render.sh
src/nmail/: __init__.py  cli.py  cli_commands1.py  cli_commands2.py  config.py  constants.py  drafts.py  headers.py  logging.py  maildir.py  message.py  notmuch.py  render.py  shared.py
src/nmail/cli/: __init__.py  archive.py  attach.py  compose.py  contacts.py  forward.py  hook.py  log.py  open.py  render.py  reply.py  search.py  send.py  session.py  status.py  sync.py  tag.py  template.py  trash.py  watch.py
templates/: default.md  forward.md  reply.md
tests/: conftest.py  test_config.py  test_contacts.py  test_drafts.py  test_headers.py  test_maildir.py  test_profiles.py  test_render.py  test_shared.py  test_smoke.py  test_smtp_send.py
