[project]
name = "nmail"
version = "0.1.0"
description = "Terminal-first mail client — compose, search, reply, and manage mail from the command line"
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "click>=8.1",
    "tomli>=2.0",
]

[project.scripts]
nmail = "nmail.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.11",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "C4"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.11",
    "ty>=0.0.61",
]
