[project]
name = "nmail"
version = "0.1.0"
description = "Terminal-first mail client — compose, search, reply, and manage mail from the command line"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",

    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Communications :: Email :: Email Clients (MUA)",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "tomli>=2.0",
]

[project.urls]
Homepage = "https://github.com/t1enne/nmail"
Repository = "https://github.com/t1enne/nmail"
Issues = "https://github.com/t1enne/nmail/issues"

[project.scripts]
nmail = "nmail.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.11",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "C4"]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=8",
    "ruff>=0.11",
    "ty>=0.0.61",
]
